--- a/home-marketing-startup-onePage.html
+++ b/home-marketing-startup-onePage.html
@@ -54,6 +54,7 @@
                     <a class="navbar-brand" href="#" data-scroll-nav="0">
                         <img src="assets/img/logo_home6.png" alt="">
                     </a>
+                    
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -127,23 +128,7 @@
                                 تضمین بهترین بازگشت سرمایه برای نیاز کمپین سئوی سفارشی شما. <br>
                                 تجزیه و تحلیل SEO رایگان خود را دریافت کنید
                             </div>
-                            <form action="https://smartinnovates.com/items/iteck/html/contact.php" class="form"
-                                method="post">
-                                <div class="form-group">
-                                    <i class="fas fa-globe ms-2"></i>
-                                    <input type="text" placeholder="آدرس سایت ">
-                                </div>
-                                <div class="form-group">
-                                    <i class="far fa-envelope ms-2"></i>
-                                    <input type="text" placeholder="youremail@domain.com">
-                                </div>
-                                <a href="#" class="btn rounded-pill butn-blue6 hover-blue2 sm-butn fw-bold">
-                                    <span>
-                                        بررسی کن
-                                        <i class="bi bi-arrow-left me-1"></i>
-                                    </span>
-                                </a>
-                            </form>
+                            
                         </div>
                     </div>
                 </div>
@@ -529,48 +514,6 @@
         <!-- ====== end choose us ====== -->
 
 
-        <!-- ====== start testimonials ====== -->
-        <div class="testimonials style-6" data-scroll-index="5">
-            <div class="container">
-                <div class="row gx-0 align-items-center justify-content-between">
-                    <div class="col-lg-4">
-                        <div class="testi-slider style-6 slider-style-6">
-                            <div class="icon mb-50">
-                                <i class="fas fa-quote-right"></i>
-                            </div>
-                            <div class="swiper-container">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide">
-                                        <div class="testi-card">
-                                            <div class="text">
-                                                نمی دانم دیگر چه بگویم، این چیزی است که قبلاً ندیده اید. طراحی منحصر به
-                                                فرد، سبک وزن، و پشتیبانی برجسته. آی تک سئو همیشه از کار کردن لذت می برد!
-                                            </div>
-                                            <div class="author mt-30">
-                                                <span class="color-000 fw-bold text-capitalize">کانر مارتینز</span>
-                                                <p class="fs-10px"> کارگردان در <a href="#"
-                                                        class="text-decoration-underline color-blue6"> Ecoland Resort &
-                                                        Hotel </a> </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="img">
-                            <img src="assets/img/testimonials/users_6.png" alt="" class="">
-                            <img src="assets/img/testimonials/bubbls.png" alt="" class="bubbls rotate-center">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- ====== end testimonials ====== -->
-
 
         <!-- ====== start clients ====== -->
         <section class="clients style-5" data-scroll-index="6">
@@ -660,140 +603,11 @@
         <!-- ====== end numbers ====== -->
 
 
-        <!-- ====== start team ====== -->
-        <section class="team section-padding style-6" data-scroll-index="7">
-            <div class="content">
-                <div class="container">
-                    <div class="row items align-items-end mb-50">
-                        <div class="col-lg-7">
-                            <div class="section-head mb-0 style-6">
-                                <h2 class="mb-0"> اعضای
-                                    <span> <small> تیم آی تک </small> </span>
-                                </h2>
-                            </div>
-                        </div>
-                        <div class="col-lg-5 text-start">
-                            <a class="text-decoration-underline text-uppercase mb-4" href="#">نمایش تمام اعضا</a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-3">
-                            <div class="team-card mb-30 mb-lg-0 style-6">
-                                <div class="img img-cover">
-                                    <img src="assets/img/team/1.jpg" alt="">
-                                    <div class="social-icons">
-                                        <a href="#">
-                                            <i class="fab fa-twitter"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-linkedin-in"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-github"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="info">
-                                    <a class="d-block" href="#">
-                                        <h6>مایکل ادوارد</h6>
-                                    </a>
-                                    <small>موسس و مدیرعامل</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="team-card mb-30 mb-lg-0 style-6">
-                                <div class="img img-cover">
-                                    <img src="assets/img/team/5.jpg" alt="">
-                                    <div class="social-icons">
-                                        <a href="#">
-                                            <i class="fab fa-twitter"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-linkedin-in"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-github"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="info">
-                                    <a class="d-block" href="#">
-                                        <h6>بابی کین</h6>
-                                    </a>
-                                    <small>CTO</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="team-card mb-30 mb-lg-0 style-6">
-                                <div class="img img-cover">
-                                    <img src="assets/img/team/3.jpg" alt="">
-                                    <div class="social-icons">
-                                        <a href="#">
-                                            <i class="fab fa-twitter"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-linkedin-in"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-github"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="info">
-                                    <a class="d-block" href="#">
-                                        <h6>رابرت جونیور</h6>
-                                    </a>
-                                    <small>مدیر پروژه</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="team-card style-6">
-                                <div class="img img-cover">
-                                    <img src="assets/img/team/4.jpg" alt="">
-                                    <div class="social-icons">
-                                        <a href="#">
-                                            <i class="fab fa-twitter"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-linkedin-in"></i>
-                                        </a>
-                                        <a href="#">
-                                            <i class="fab fa-github"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="info">
-                                    <a class="d-block" href="#">
-                                        <h6>آندرو رابرتسون</h6>
-                                    </a>
-                                    <small>مدیر بازاریابی</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- ====== end team ====== -->
+
 
 
         <!-- ====== start blog ====== -->
-        <section class="blog section-padding style-6" data-scroll-index="8">
+        <!-- <section class="blog section-padding style-6" data-scroll-index="8">
             <div class="container">
                 <div class="section-head mb-70 style-6 text-center">
                     <h2 class="mb-20"> آخرین ها از
@@ -919,7 +733,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- ====== end blog ====== -->
 
 
