--- a/page-contact-app.html
+++ b/page-contact-app.html
@@ -48,20 +48,7 @@
     <!-- ====== end loading page ====== -->
 
     <!-- ====== start top navbar ====== -->
-    <div class="top-navbar style-4">
-        <div class="container">
-            <div class="content text-white">
-                <span class="btn sm-butn bg-white py-0 px-2 me-2 fs-10px">
-                    <small class="fs-10px">ویژه</small>
-                </span>
-                <img src="assets/img/icons/nav_icon/imoj_heart.png" alt="" class="icon-15">
-                <span class="fs-10px op-6">دریافت </span>
-                <small class="op-10 fs-10px">20% تخفیف</small>
-                <span class="fs-10px op-6">با ساختن اکانت</span>
-                <a href="page-contact-5.html" class="fs-10px text-decoration-underline ms-2">ثبت نام</a>
-            </div>
-        </div>
-    </div>
+    
     <!-- ====== end top navbar ====== -->
 
     <!-- ====== start navbar ====== -->
@@ -178,98 +165,12 @@
                 </div>
             </div>
         </section>
-        <section class="contact section-padding pt-0 style-6">
-            <div class="container">
-                <div class="content">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-8">
-                            <form action="#" class="form" method="post">
-                                <p class="text-center text-danger fs-12px mb-30">فیلد های ستاره دار الزامی هستند</p>
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <div class="form-group mb-20">
-                                            <input type="text" class="form-control" placeholder="نام">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="form-group mb-20">
-                                            <input type="text" class="form-control" placeholder="ایمیل *">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="form-group mb-20">
-                                            <input type="text" class="form-control" placeholder="شماره تماس (اختیاری)">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="form-group mb-20">
-                                            <input type="text" class="form-control" placeholder="وب سایت شما (اختیاری)">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <div class="form-group mb-20">
-                                            <select class="form-select">
-                                                <option value="" selected>چطور میتونیم کمک کنیم؟</option>
-                                                <option value="">گزینه 1</option>
-                                                <option value="">گزینه 2</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <div class="form-group">
-                                            <textarea name="textarea" rows="10" class="form-control"
-                                                placeholder="در چه زمینه ای نیاز به همفکری دارید؟"></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 text-center mt-30 mb-30">
-
-                                    </div>
-                                    <div class="col-lg-12 text-center">
-                                        <a href="#" class="btn rounded-pill blue5-3Dbutn hover-blue2 sm-butn fw-bold">
-                                            <span>ثبت درخواست </span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <img src="assets/img/icons/contact_a.png" alt="" class="contact_a">
-                    <img src="assets/img/icons/contact_message.png" alt="" class="contact_message">
-                </div>
-            </div>
-        </section>
-        <!-- ====== end contact page ====== -->
-
-        <!-- ====== start contact page ====== -->
-        <div class="map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24219.60999175365!2d-73.9764341314902!3d40.64198229194528!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b400c94a227%3A0x18e2a4d3fb21f0ec!2sFlatbush%2C%20Brooklyn%2C%20NY%2C%20USA!5e0!3m2!1sen!2seg!4v1651361759450!5m2!1sen!2seg"
-                height="500" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <!-- ====== start contact page ====== -->
-    </main>
-    <!--End-Contents-->
 
     <!-- ====== start footer ====== -->
     <footer class="style-4 mt-0 pt-100">
         <div class="container">
-            <div class="section-head text-center style-4">
-                <h2 class="mb-10"> آماده <span> دانلود </span> </h2>
-                <p>فضاهای مورد علاقه جدید خود را از سائوپائولو تا سئول کشف کنید. از اپ استور یا گوگل پلی دانلود کنید.
-                </p>
-                <div class="d-flex align-items-center justify-content-center mt-50">
-                    <a href="https://www.apple.com/app-store/" class="btn rounded-pill bg-blue4 fw-bold text-white ms-4"
-                        target="_blank">
-                        <small> دانلود از اپ استور <i class="fab fa-apple me-2 pe-2 border-end"></i></small>
-                    </a>
-                    <a href="https://play.google.com/store/apps"
-                        class="btn rounded-pill hover-blue4 fw-bold border-blue4" target="_blank">
-                        <small> دانلود از گوگل پلی <i class="fab fa-google-play me-2 pe-2 border-end"></i></small>
-                    </a>
-                </div>
-            </div>
-            <div class="foot mt-80">
+            <div class="foot mt-80" style="padding: 40px 0px 30px;">
+            <!-- For the of not interfering with Bootstrap and thanks to the actual CSS file when there isn't a mention of this class, I'll do it here for safety -->
                 <div class="row align-items-center">
                     <div class="col-lg-2">
                         <div class="logo">
