The changes of the 2nd day

--- a/page-single-post-5-wide.html
+++ b/page-single-post-5-wide.html
@@ -17,7 +17,7 @@
     <title>آی تک</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/fav.png" title="Favicon" sizes="16x16" />
+    <link rel="shortcut icon" href="assets/img/suntech_logo.png" title="Favicon" sizes="16x16" />
 
     <!-- ====== bootstrap icons cdn ====== -->
     <link rel="stylesheet" href="../cdn.jsdelivr.net/npm/bootstrap-icons%401.7.2/font/bootstrap-icons.css">
@@ -51,7 +51,7 @@
     <nav class="navbar navbar-expand-lg navbar-light style-5">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/logo_home5.png" alt="">
+                <img src="assets/img/suntech_logo.png" alt="" style="height: 60px;" >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -59,7 +59,71 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                                <ul class="navbar-nav m-auto mb-2 mb-lg-0" style="padding-right: 55px;">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            صفحات اصلی
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                            <li><a class="dropdown-item" href="home-app-landing.html"> لندینگ اپ </a></li>
+                            <li><a class="dropdown-item" href="home-saas-technology.html"> تکلونوژی ساس </a></li>
+                            <li><a class="dropdown-item" href="home-marketing-startup.html"> استارتاپ بازاریابی </a>
+                            </li>
+                            <li><a class="dropdown-item" href="home-it-solutions.html"> فناوری اطلاعات </a></li>
+                            <li><a class="dropdown-item" href="home-software-company.html"> شرکت نرم افزار </a></li>
+                            <li><a class="dropdown-item" href="home-digital-agency.html"> آژانس دیجیتال </a></li>
+                        </ul>
+                    </li>
+                    
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="2">
+                            خدمات
+                        </a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="3">
+                            نمونه کار
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="page-blog-5.html">
+                            وبلاگ
+                        </a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="4">
+                            چرا ما
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="5">
+                            نظرات
+                        </a>
+                    </li> -->
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="6">
+                            مشتریان
+                        </a>
+                    </li> -->
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="7">
+                            تیم
+                        </a>
+                    </li> -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" data-scroll-nav="1">
+                            درباره ما
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="page-contact-5.html">
+                            تماس با ما
+                        </a>
+                    </li>
+                </ul>
+
+                <!-- <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown1" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -107,7 +171,7 @@
                         </a>
                     </li>
 
-                </ul>
+                </ul> -->
                 <div class="nav-side">
                     <div class="d-flex align-items-center">
                         <span class="nav-item">
@@ -117,7 +181,7 @@
                             </a>
                         </span>
                         <a href="page-contact-5.html" class="btn rounded-pill blue5-3Dbutn hover-blue2 sm-butn fw-bold">
-                            <span>آزمایش رایگان <i class="bi bi-arrow-left ms-1"></i> </span>
+                            <span>درخواست مشاوره رایگان <i class="bi bi-arrow-left ms-1"></i> </span>
                         </a>
                     </div>
                 </div>
@@ -702,10 +766,10 @@
                 </div>
             </div>
             <div class="foot">
-                <div class="row">
+                <div class="row" style="display: flex; align-items: center;">
                     <div class="col-lg-3">
                         <div class="logo">
-                            <img src="assets/img/logo_foot_home5.png" alt="">
+                            <img src="assets/img/suntech_logo.png" alt="" style="height: 50px;">
                         </div>
                     </div>
                     <div class="col-lg-6">
