--- a/page-single-project-5.html
+++ b/page-single-project-5.html
@@ -17,7 +17,7 @@
     <title>آی تک</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/fav.png" title="Favicon" sizes="16x16" />
+    <link rel="shortcut icon" href="assets/img/suntech_logo.png" title="Favicon" sizes="16x16" />
 
     <!-- ====== bootstrap icons cdn ====== -->
     <link rel="stylesheet" href="../cdn.jsdelivr.net/npm/bootstrap-icons%401.7.2/font/bootstrap-icons.css">
@@ -51,7 +51,7 @@
     <nav class="navbar navbar-expand-lg navbar-light style-5">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/logo_home5.png" alt="">
+                <img src="assets/img/suntech_logo.png" alt="" style="height: 60px;" >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -59,7 +59,71 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav m-auto mb-2 mb-lg-0" style="padding-right: 30px;">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            صفحات اصلی
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                            <li><a class="dropdown-item" href="home-app-landing.html"> لندینگ اپ </a></li>
+                            <li><a class="dropdown-item" href="home-saas-technology.html"> تکلونوژی ساس </a></li>
+                            <li><a class="dropdown-item" href="home-marketing-startup.html"> استارتاپ بازاریابی </a>
+                            </li>
+                            <li><a class="dropdown-item" href="home-it-solutions.html"> فناوری اطلاعات </a></li>
+                            <li><a class="dropdown-item" href="home-software-company.html"> شرکت نرم افزار </a></li>
+                            <li><a class="dropdown-item" href="home-digital-agency.html"> آژانس دیجیتال </a></li>
+                        </ul>
+                    </li>
+                    
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="2">
+                            خدمات
+                        </a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="3">
+                            نمونه کار
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="page-blog-5.html">
+                            وبلاگ
+                        </a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="4">
+                            چرا ما
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="5">
+                            نظرات
+                        </a>
+                    </li> -->
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="6">
+                            مشتریان
+                        </a>
+                    </li> -->
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="7">
+                            تیم
+                        </a>
+                    </li> -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" data-scroll-nav="1">
+                            درباره ما
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="page-contact-5.html">
+                            تماس با ما
+                        </a>
+                    </li>
+                </ul>
+
+                <!-- <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown1" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -107,7 +171,7 @@
                         </a>
                     </li>
 
-                </ul>
+                </ul> -->
                 <div class="nav-side">
                     <div class="d-flex align-items-center">
                         <span class="nav-item">
@@ -117,7 +181,7 @@
                             </a>
                         </span>
                         <a href="page-contact-5.html" class="btn rounded-pill blue5-3Dbutn hover-blue2 sm-butn fw-bold">
-                            <span>آزمایش رایگان <i class="bi bi-arrow-left ms-1"></i> </span>
+                            <span>درخواست مشاوره رایگان <i class="bi bi-arrow-left ms-1"></i> </span>
                         </a>
                     </div>
                 </div>
@@ -237,7 +301,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="imgs mt-60 mb-100">
+                <!-- <div class="imgs mt-60 mb-100">
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="img img-cover rounded-3 overflow-hidden mb-30 mb-lg-0">
@@ -250,67 +314,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row gx-5">
-                    <div class="col-lg-4">
-                        <div class="section-head style-5">
-                            <h2 class=""> راه حل و <br> <span> نتیجه </span> </h2>
-                        </div>
-                    </div>
-                    <div class="col-lg-8">
-                        <div class="inf">
-                            <div class="text color-666 mb-10">
-                                رویکرد ما این بود که سایت را به‌عنوان یک پلتفرم تحریریه بصری با ویژگی‌های فصلی بر اساس
-                                رویدادها و مناسبت‌هایی که برند روی آن متمرکز شده بود، ارائه کنیم. هر تمرکز فصلی با
-                                قهرمان و برچسب های سفارشی که محتوا را فیلتر می کند مشخص می شود.
-                            </div>
-                            <div class="text color-666 mb-20">
-                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک
-                                است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که
-                            </div>
-                            <div class="color-000 mt-50">
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <div class="d-flex mb-20 fw-bold">
-                                            <div
-                                                class="icon-20 d-inline-flex justify-content-center align-items-center rounded-circle overflow-hidden bg-blue5 text-white flex-shrink-0 ms-2">
-                                                <i class="bi bi-check"></i>
-                                            </div>
-                                            یادداشت های خود را با چند رسانه ای ایجاد و کنید
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="d-flex mb-20 fw-bold">
-                                            <div
-                                                class="icon-20 d-inline-flex justify-content-center align-items-center rounded-circle overflow-hidden bg-blue5 text-white flex-shrink-0 ms-2">
-                                                <i class="bi bi-check"></i>
-                                            </div>
-                                            ویرایشگر کامل یادداشت با گزینه های متن غنی
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="d-flex mb-20 mb-lg-0 fw-bold">
-                                            <div
-                                                class="icon-20 d-inline-flex justify-content-center align-items-center rounded-circle overflow-hidden bg-blue5 text-white flex-shrink-0 ms-2">
-                                                <i class="bi bi-check"></i>
-                                            </div>
-                                            پسوند Web Clipper
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="d-flex mb-0 fw-bold">
-                                            <div
-                                                class="icon-20 d-inline-flex justify-content-center align-items-center rounded-circle overflow-hidden bg-blue5 text-white flex-shrink-0 ms-2">
-                                                <i class="bi bi-check"></i>
-                                            </div>
-                                            همگام سازی خودکار در زمان واقعی
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <!-- ====== end challenge ====== -->
@@ -352,127 +356,6 @@
             <img src="assets/img/screenshots/hand.png" alt="" class="mob-hand">
         </div>
         <!-- ====== end screenshots  ====== -->
-
-
-        <!-- ====== start about ====== -->
-        <section class="about-app style-5">
-            <div class="container">
-                <div class="content text-center">
-                    <div class="next-prog section-padding">
-                        <h5 class="color-999 text-uppercase fw-light">بعدی</h5>
-                        <a href="#" class="color-000 fs-1 fw-bold mt-20">صفحه فرود کریفتوسی</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- ====== end about ====== -->
-
-        <!-- ====== start projects ====== -->
-        <section class="projects style-6 p-0">
-            <div class="content section-padding rounded-0">
-                <div class="container">
-                    <div class="section-head text-center mb-60 style-5">
-                        <h2 class="mb-20"> مرتبط <span> با این پروژه </span> </h2>
-                        <p>ما یک تیم با تجربه از پرسنل تولید و بازرسی برای اطمینان از کیفیت داریم.</p>
-                    </div>
-                    <div class="slider-3items slider-style-6">
-                        <div class="swiper-container pb-0">
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <div class="project-card style-6">
-                                        <div class="img">
-                                            <img src="assets/img/projects/4.png" alt="">
-                                        </div>
-                                        <div class="info">
-                                            <h3 class="title"><a href="page-single-project-5.html">کیف پول الکترونیکی
-                                                    Okpay </a></h3>
-                                            <small class="color-blue6"><a href="#">آنالیز سئو</a></small>
-                                            <div class="text">
-                                                به ذهن برتر ما اعتماد کنید تا نقاط دردناک گردش کار را حذف کنید،
-
-                                            </div>
-                                            <div class="tags">
-                                                <span><a href="#">آنالیز سئو</a></span>
-                                                <span><a href="#">استراتژی محتوا</a></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="project-card style-6">
-                                        <div class="img">
-                                            <img src="assets/img/projects/5.png" alt="">
-                                        </div>
-                                        <div class="info">
-                                            <h3 class="title"><a href="#">داشبورد تجارت الکترونیک</a></h3>
-                                            <small class="color-blue6"><a href="#">طراحی و توسعه</a> & <a href="#">وب
-                                                    سایت</a></small>
-                                            <div class="text">
-                                                برای حذف نقاط دردناک گردش کار، پیاده‌سازی فناوری و برنامه جدید، به ذهن
-                                                برتر ما اعتماد کنید.
-                                            </div>
-                                            <div class="tags">
-                                                <span><a href="#">WordPress</a></span>
-                                                <span><a href="#">PHP</a></span>
-                                                <span><a href="#">HTML/CSS</a></span>
-                                                <span><a href="#">Figma</a></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="project-card style-6">
-                                        <div class="img">
-                                            <img src="assets/img/projects/7.png" alt="">
-                                        </div>
-                                        <div class="info">
-                                            <h3 class="title"><a href="#">فروشگاه MLB اینستاگرام</a></h3>
-                                            <small class="color-blue6"><a href="#">شبکه های اجتماعی</a></small>
-                                            <div class="text">
-                                                برای حذف نقاط دردناک گردش کار، پیاده‌سازی فناوری و برنامه جدید، به ذهن
-                                                برتر ما اعتماد کنید.
-                                            </div>
-                                            <div class="tags">
-                                                <span><a href="#">Social</a></span>
-                                                <span><a href="#">Instagram</a></span>
-                                                <span><a href="#">Followers</a></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="project-card style-6">
-                                        <div class="img">
-                                            <img src="assets/img/projects/5.png" alt="">
-                                        </div>
-                                        <div class="info">
-                                            <h3 class="title"><a href="#">داشبورد تجارت الکترونیک</a></h3>
-                                            <small class="color-blue6"><a href="#">طراحی و توسعه</a> & <a href="#">وب
-                                                    سایت</a></small>
-                                            <div class="text">
-                                                برای حذف نقاط دردناک گردش کار، پیاده‌سازی فناوری و برنامه جدید، به ذهن
-                                                برتر ما اعتماد کنید.
-                                            </div>
-                                            <div class="tags">
-                                                <span><a href="#">WordPress</a></span>
-                                                <span><a href="#">PHP</a></span>
-                                                <span><a href="#">HTML/CSS</a></span>
-                                                <span><a href="#">Figma</a></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- ====== arrows ====== -->
-                        <div class="swiper-button-next"></div>
-                        <div class="swiper-button-prev"></div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- ====== end projects ====== -->
 
     </main>
     <!--End-Contents-->
@@ -581,10 +464,10 @@
                 </div>
             </div>
             <div class="foot">
-                <div class="row">
+                <div class="row" style="display: flex; align-items: center;">
                     <div class="col-lg-3">
                         <div class="logo">
-                            <img src="assets/img/logo_foot_home5.png" alt="">
+                            <img src="assets/img/suntech_logo.png" alt="" style="height: 50px;">
                         </div>
                     </div>
                     <div class="col-lg-6">
