--- a/page-contact-app.html
+++ b/page-contact-app.html
@@ -17,7 +17,7 @@
     <title>آی تک</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/fav.png" title="Favicon" sizes="16x16" />
+    <link rel="shortcut icon" href="assets/img/suntech_logo.png" title="Favicon" sizes="16x16" />
 
     <!-- ====== bootstrap icons cdn ====== -->
     <link rel="stylesheet" href="../cdn.jsdelivr.net/npm/bootstrap-icons%401.7.2/font/bootstrap-icons.css">
@@ -55,7 +55,7 @@
     <nav class="navbar navbar-expand-lg navbar-light style-4">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/logo_lgr.png" alt="">
+                <img src="assets/img/suntech_logo.png" alt="" style="height: 60px;" >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -63,7 +63,71 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav m-auto mb-2 mb-lg-0 text-uppercase">
+                <ul class="navbar-nav m-auto mb-2 mb-lg-0" style="padding-right: 30px;">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            صفحات اصلی
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                            <li><a class="dropdown-item" href="home-app-landing.html"> لندینگ اپ </a></li>
+                            <li><a class="dropdown-item" href="home-saas-technology.html"> تکلونوژی ساس </a></li>
+                            <li><a class="dropdown-item" href="home-marketing-startup.html"> استارتاپ بازاریابی </a>
+                            </li>
+                            <li><a class="dropdown-item" href="home-it-solutions.html"> فناوری اطلاعات </a></li>
+                            <li><a class="dropdown-item" href="home-software-company.html"> شرکت نرم افزار </a></li>
+                            <li><a class="dropdown-item" href="home-digital-agency.html"> آژانس دیجیتال </a></li>
+                        </ul>
+                    </li>
+                    
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="2">
+                            خدمات
+                        </a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="3">
+                            نمونه کار
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="page-blog-5.html">
+                            وبلاگ
+                        </a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="4">
+                            چرا ما
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="5">
+                            نظرات
+                        </a>
+                    </li> -->
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="6">
+                            مشتریان
+                        </a>
+                    </li> -->
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" data-scroll-nav="7">
+                            تیم
+                        </a>
+                    </li> -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" data-scroll-nav="1">
+                            درباره ما
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="page-contact-5.html">
+                            تماس با ما
+                        </a>
+                    </li>
+                </ul>
+
+                <!-- <ul class="navbar-nav m-auto mb-2 mb-lg-0 text-uppercase">
                     <li class="nav-item dropdown">
                         <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown1" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -110,7 +174,7 @@
                             ارتباط
                         </a>
                     </li>
-                </ul>
+                </ul> -->
                 <div class="nav-side">
                     <div class="d-flex align-items-center">
                         <a href="#" class="search-icon me-4">
@@ -143,7 +207,15 @@
                             <img src="assets/img/icons/mail3d.png" alt="">
                         </div>
                         <div class="inf">
-                            <h5>contact@Iteck.com </h5>
+                            <h5>raisi.m630@gmail.com </h5>
+                        </div>
+                    </div>
+                    <div class="commun-card">
+                        <div class="icon icon-45">
+                            <img src="assets/img/icons/instagram.png" alt="">
+                        </div>
+                        <div class="inf">
+                            <h5>sb_suntech </h5>
                         </div>
                     </div>
                     <div class="commun-card">
@@ -151,7 +223,7 @@
                             <img src="assets/img/icons/map3d.png" alt="">
                         </div>
                         <div class="inf">
-                            <h5>ایران ، تهران</h5>
+                            <h5>ایران، زاهدان، پارک علم و فناوری</h5>
                         </div>
                     </div>
                     <div class="commun-card">
@@ -159,78 +231,12 @@
                             <img src="assets/img/icons/msg3d.png" alt="">
                         </div>
                         <div class="inf">
-                            <h5>021-12345678</h5>
+                            <h5>8230 630 915</h5>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
-    <!-- ====== start footer ====== -->
-    <footer class="style-4 mt-0 pt-100">
-        <div class="container">
-            <div class="foot mt-80" style="padding: 40px 0px 30px;">
-            <!-- For the of not interfering with Bootstrap and thanks to the actual CSS file when there isn't a mention of this class, I'll do it here for safety -->
-                <div class="row align-items-center">
-                    <div class="col-lg-2">
-                        <div class="logo">
-                            <img src="assets/img/logo_lgr.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-lg-8">
-                        <ul class="links">
-                            <li>
-                                <a href="home-app-landing.html" class="active">خانه</a>
-                            </li>
-                            <li>
-                                <a href="page-about-5.html">درباره ما</a>
-                            </li>
-                            <li>
-                                <a href="page-product-5.html">محصولات</a>
-                            </li>
-                            <li>
-                                <a href="page-portfolio-5.html">نمونه کار</a>
-                            </li>
-                            <li>
-                                <a href="page-services-5.html">سرویس ها</a>
-                            </li>
-                            <li>
-                                <a href="page-shop-5.html">فروشگاه</a>
-                            </li>
-                            <li>
-                                <a href="page-blog-5.html">وبلاگ</a>
-                            </li>
-                            <li>
-                                <a href="page-contact-5.html">ارتباط با ما</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2">
-                        <div class="dropdown">
-                            <button class="icon-25 dropdown-toggle p-0 border-0 bg-transparent rounded-circle img-cover"
-                                type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="assets/img/lang.png" alt="" class="ms-2">
-                                <small>English</small>
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="#">English</a></li>
-                                <li><a class="dropdown-item" href="#">فارسی</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="copywrite text-center">
-                <small class="small">
-                    © 2022 کپی رایت <a href="#" class="fw-bold text-decoration-underline">آی تک.</a> تمامی حقوق محفوظ
-                    است. فروش در <a href="https://www.rtl-theme.com/"
-                        class="fw-bold text-decoration-underline">راستچین</a>
-                </small>
-            </div>
-        </div>
-        <!-- <img src="assets/img/footer/footer_4_wave.png" alt="" class="wave"> -->
-    </footer>
-    <!-- ====== end footer ====== -->
 
     <!-- ====== start to top button ====== -->
     <a href="#" class="to_top bg-gray rounded-circle icon-40 d-inline-flex align-items-center justify-content-center">
