Deleting unnecessary fluff

--- a/home-marketing-startup-onePage.html
+++ b/home-marketing-startup-onePage.html
@@ -475,7 +475,7 @@
                         <div class="info">
                             <div class="section-head mb-20 style-6">
                                 <h2> دلیل انتخاب
-                                    <span> <small> آی تک سئو </small> </span>
+                                    <span> <small> سان تک </small> </span>
                                 </h2>
                             </div>
                             <div class="text mb-50">
